@startuml
class MaisonMere
MaisonMere "1" o-- "*" Magasin : supervise
MaisonMere "1" o-- "*" Employe : emploie

class Magasin

class Produit {
  id
  nom
  prix
  description
}

class Stock {
  quantite
}
Magasin "1" o-- "*" Stock : possède
Stock "*" o-- "1" Produit : concerne

class Client {
  id
  nom
}

class Vente
Vente "*" o-- "1" Client
Vente "*" o-- "1" Magasin
Vente "1" o-- "*" LigneVente : compose
LigneVente "*" o-- "1" Produit

class Employe {
  id
  nom
  role
}

@enduml
